# antares

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  MISSING_DELIVERABLES_SUMMARY.md  Makefile  PARTY_MANAGEMENT_AUDIT.md  PHASE2_CHECKLIST.md  PHASE2_COMPLETION_SUMMARY.md  PHASE2_DELIVERABLES.txt  PHASE5_COMPLETION_SUMMARY.md  PHASE6_COMPLETION_SUMMARY.md  PHASE6_SUMMARY.txt  PHASE8_SUMMARY.md  PHASE9_SUMMARY.md  PHASE_4_COMPLETION_SUMMARY.md  PLAN.md  README.md  TEST_FIXES_SUMMARY.md  _PLAN.md  antares.yml  main.go  prompt.sh  prompt.txt
.github/workflows/: ci.yml
assets/meshes/: dead_tree.ron  oak_tree_short.ron  palm_tree.ron  pine_tree.ron
assets/shaders/: grass.wgsl  grass_instanced.wgsl
assets/sprites/: README.md
benches/: grass_instancing.rs  grass_rendering.rs  sprite_rendering.rs
campaigns/: config.template.ron
campaigns/example/: README.md  campaign.ron
campaigns/foo/: campaign.ron
campaigns/tutorial/: README.md  campaign.ron  config.ron  creature_mappings.md
cmd/: loader.go  main.go  root.go  server.go
data/: characters.ron  classes.ron  conditions.ron  items.ron  monsters.ron  npc_stock_templates.ron  npcs.ron  proficiencies.ron  races.ron  skills.ron  spells.ron  sprite_sheets.ron  test_town.ron
data/creature_examples/: dragon.ron  fire_elemental.ron  giant_rat.ron  goblin.ron  kobold.ron  lich.ron  ogre.ron  orc.ron  skeleton.ron  wolf.ron  zombie.ron
data/creature_templates/: beast.meta.ron  beast.ron  dragon.meta.ron  dragon.ron  humanoid.meta.ron  humanoid.ron  quadruped.meta.ron  quadruped.ron  robot.meta.ron  robot.ron  undead.meta.ron  undead.ron
data/examples/: character_definition_formats.ron
data/maps/: forest_area.ron  starter_dungeon.ron  starter_town.ron  visual_metadata_examples.ron
data/test_campaign/: README.md  campaign.ron  config.ron
docs/: README.md
docs/explanation/: README.md  SDK_updates.md  SPELL_EXAMPLE.md  advanced_procedural_meshes_implementation_plan.md  advanced_procedural_meshes_missing_deliverables_assessment.md  advanced_procedural_meshes_plan_review.md  architecture_update_summary.md  automap_and_mini_map_implementation_plan.md  (+231 more)
examples/: apprenticezara.ron  gen_detailed_meshes.py  gen_dire_wolves.py  gen_monsters2.py  generate_all_meshes.py  generate_characters.py  generate_item_meshes.py  generate_starter_maps.rs  name_generator_example.rs  npc_blocking_README.md  npc_blocking_example.rs  obj_to_ron_universal.py
lib/: antarians.go  utils.go
loader/: loader.go
pkgs/: foo.json
scripts/: clean_map_metadata.py  discover_csv_combobox.sh  fix_foliage_density.py  fix_foliage_simple.py  generate_icons.sh  generate_placeholder_sprites.py  phase5_refactor.py  test-changed.sh  test-full.sh  update_tutorial_maps.py  update_tutorial_maps.rs  update_tutorial_maps.sh  validate_creature_editor_doc_parity.sh  validate_csv_migration.sh  validate_tutorial_maps.sh
sdk/: AGENTS.md
sdk/campaign_builder/: Cargo.toml  FRAMEWORK_DECISION.md  PHASE2_COMPLETE.md  QUICKSTART.md  README.md  TESTING.md
sdk/campaign_builder/src/: advanced_validation.rs  advanced_validation.rs.bak  animation_editor.rs  app_dialogs.rs  asset_manager.rs  auto_save.rs  campaign_editor.rs  campaign_io.rs  campaign_io_tests.rs  characters_editor.rs  classes_editor.rs  color_palette.rs  conditions_editor.rs  config_editor.rs  context_menu.rs  creature_assets.rs  creature_id_manager.rs  creature_templates.rs  creature_undo_redo.rs  creatures_editor.rs  creatures_manager.rs  creatures_workflow.rs  dialogue_editor.rs  editor_context.rs  editor_state.rs  editor_state_tests.rs  furniture_editor.rs  icon.rs  item_mesh_editor.rs  item_mesh_undo_redo.rs  item_mesh_workflow.rs  items_editor.rs  items_editor.rs.bak  keyboard_shortcuts.rs  landscape_editor.rs  levels_editor.rs  lib.rs  linear_history.rs  lod_editor.rs  logging.rs  (+39 more)
sdk/campaign_builder/src/creatures_editor/: mesh_ui.rs  mod.rs  preview_panel.rs
sdk/campaign_builder/src/npc_editor/: context.rs  mod.rs  portrait_picker.rs
sdk/campaign_builder/src/ui_helpers/: attribute.rs  autocomplete.rs  file_io.rs  layout.rs  mod.rs  tests.rs
sdk/campaign_builder/tests/: app_state_tests.rs  bug_verification.rs  campaign_io_tests.rs  conditions_examples.rs  creature_asset_editor_tests.rs  creature_preview_integration_test.rs  creature_workflow_tests.rs  editor_state_tests.rs  furniture_customization_tests.rs  furniture_editor_tests.rs  furniture_properties_tests.rs  gui_integration_test.rs  integration_tests.rs  map_data_validation.rs  mesh_editing_tests.rs  phase4_gui_integration_test.rs  phase4_mesh_editing_tests.rs  phase5_rotation_test.rs  ron_serialization_tests.rs  rotation_test.rs  template_system_integration_tests.rs  ui_improvements_test.rs  visual_preset_tests.rs
server/: handlers.go  repo.go  router.go  routes.go  server.go  utils.go
src/: lib.rs  test_helpers.rs
tests/: advanced_trees_integration_test.rs  antares_sdk_binary_tests.rs  barred_passage_integration_test.rs  campaign_integration_test.rs  campaign_integration_tests.rs  cli_editor_tests.rs  combat_integration.rs  creatures_editor_integration_tests.rs  data_validation_tests.rs  database_integration_test.rs  dialogue_choice_test.rs  dialogue_error_handling_test.rs  dialogue_state_integration_test.rs  dialogue_visuals_test.rs  dropped_item_integration_test.rs  foliage_rendering_test.rs  foliage_texture_spec_test.rs  furniture_rendering_tests.rs  game_config_integration.rs  game_flow_integration.rs  grass_rendering_test.rs  innkeeper_party_management_integration_test.rs  innkeeper_service_integration_test.rs  integration_test.rs  magic_integration.rs  map_authoring_test.rs  map_content_tests.rs  menu_state_test.rs  menu_toggle_test.rs  merchant_transaction_integration_test.rs  mouse_input_regression.rs  no_townid.rs  npc_dialogue_integration_test.rs  performance_tests.rs  phase10_furniture_rendering_tests.rs  phase14_campaign_integration_test.rs  phase1_advanced_trees_integration_test.rs  phase2_vegetation_integration_test.rs  phase3_foliage_rendering_test.rs  phase3_map_authoring_test.rs  (+17 more)
tools/: migrate_doors.py
(+684 files in other folders)
