[workspace]
members = [
    ".",
    "sdk/campaign_builder",
]

[package]
name = "antares"
version = "0.1.0"
edition = "2021"
authors = ["Antares Contributors"]
description = "A classic turn-based RPG inspired by Might and Magic 1"
license = "MIT"
repository = "https://github.com/xbcsmith/antares"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ron = "0.8"
thiserror = "1.0"
rand = "0.8"
rustyline = "17.0.2"
clap = { version = "4.5", features = ["derive"] }

[[bin]]
name = "campaign_validator"
path = "src/bin/campaign_validator.rs"

[dev-dependencies]
