[workspace]
members = [
    ".",
    "sdk/campaign_builder",
]

[package]
name = "antares"
version = "0.1.0"
edition = "2021"
autobins = false
authors = ["Brett Smith <xbcsmith@example.com>"]
description = "A classic data driven turn-based RPG"
license = "Apache-2.0"
repository = "https://github.com/xbcsmith/antares"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ron = "0.12"
thiserror = "2.0"
rand = "0.9"
rustyline = "17.0.2"
clap = { version = "4.5", features = ["derive"] }
flate2 = "1.1"
tar = "0.4"
sha2 = "0.10"
chrono = { version = "0.4", features = ["serde"] }
dirs = "6.0"
bevy = { version = "0.17", default-features = true }
bevy_egui = "0.38"
wayland-client = "0.31.11"
wayland-sys = "0.31.7"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
ordered-float = "4.0"
image = { version = "0.25", features = ["png"] }

[[bin]]
name = "antares"
path = "src/bin/antares.rs"

[[bin]]
name = "antares-sdk"
path = "src/bin/antares_sdk.rs"

[[bin]]
name = "class_editor"
path = "src/bin/class_editor.rs"

[[bin]]
name = "race_editor"
path = "src/bin/race_editor.rs"

[[bin]]
name = "item_editor"
path = "src/bin/item_editor.rs"

[[bin]]
name = "generate_terrain_textures"
path = "src/bin/generate_terrain_textures.rs"

[[bin]]
name = "map_builder"
path = "src/bin/map_builder.rs"

[[bin]]
name = "validate_map"
path = "src/bin/validate_map.rs"

[dev-dependencies]
tempfile = "3.23"
