[package]
name = "campaign_builder"
version = "0.1.0"
edition = "2021"
authors = ["Antares Contributors"]
description = "Campaign Builder - Visual editor for creating Antares campaigns"
license = "MIT"

[dependencies]
antares = { path = "../.." }
eframe = { version = "0.33", default-features = false, features = [
    "glow",              # OpenGL backend (most compatible, works without GPU)
    "default_fonts",     # Built-in fonts
    "wayland",           # Wayland support for Linux
    "x11",               # X11 support as fallback
] }
egui = "0.33"
serde = { version = "1.0", features = ["derive"] }
ron = "0.12"
thiserror = "2.0"

# For file dialogs
rfd = "0.15"

[dev-dependencies]
tempfile = "3.23"

[[bin]]
name = "campaign-builder"
path = "src/main.rs"
