[package]
name = "campaign_builder"
version = "0.1.0"
edition = "2021"
authors = ["Antares Contributors"]
description = "Campaign Builder - Visual editor for creating Antares campaigns"
license = "MIT"

[dependencies]
antares = { path = "../.." }
eframe = { version = "0.33", default-features = false, features = [
    "glow",              # OpenGL backend (most compatible, works without GPU)
    "default_fonts",     # Built-in fonts
    "wayland",           # Wayland support for Linux
    "x11",               # X11 support as fallback
] }
egui = "0.33"
egui_autocomplete = "12.0"
serde = { version = "1.0", features = ["derive"] }
ron = "0.12"
thiserror = "2.0"
regex = "1.11"
clap = { version = "4.5", features = ["derive"] }

# For file dialogs
rfd = "0.15"
# For clipboard support (if needed explicitly, though usually handled by egui/eframe)
arboard = "3.4"
# For image loading (portrait thumbnails)
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }

[dev-dependencies]
tempfile = "3.23"

[lib]
name = "campaign_builder"
path = "src/lib.rs"

[[bin]]
name = "campaign-builder"
path = "src/main.rs"

[[bin]]
name = "migrate_maps"
path = "src/bin/migrate_maps.rs"
